# barista-order-service

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
barista-service/: barista-worker.py  config.py  menu.py
docker/: Dockerfile.barista-service  Dockerfile.order-service
order-service/: main.py  mq.py
order-service/api/: router.py
order-service/api/routes/: orders.py
order-service/core/: config.py
order-service/db/: sessions.py
order-service/db/repositories/: orders.py
order-service/db/tables/: base_class.py  orders.py
order-service/schemas/: orders.py
scripts/: create_databases.sql  test_connection.py  test_rabbitmq.py
